# vdtnet

./: .gitmodules  CMakeLists.txt  README.md
include/vdtnet/: address.h  bit_stream.h  byte_stream.h  common.h  endianness.h  memory_stream.h  net.h  platform.h  serialization.h  socket.h  string.h
include/vdtnet/http/: channel.h  client.h  header.h  headers.h  http.h  message.h  serialization.h  server.h  url.h
include/vdtnet/internet/: message.h  mime.h  serialization.h  uri.h
include/vdtnet/utils/: string.h
samples/HttpServer/: main.cpp
samples/MemoryStreams/: main.cpp
samples/UDPChat/: main.cpp
samples/sandbox/: CMakeLists.txt  main.cpp
source/: address.cpp  common.cpp  memory_stream.cpp  net.cpp  socket.cpp  string.cpp
source/http/: channel.cpp  header.cpp  headers.cpp  server.cpp  server.h  url.cpp
source/internet/: uri.cpp
source/utils/: string.cpp
